# Voice-Assistant

./: .gitignore  AGENTS.md  LICENSE  PROJECT_CONTEXT.md  README.md  README_en.md  agent.md  brain.py  config.py  hotkey.py  listen.py  main.py  pyproject.toml  requirements.txt  sound.py  speak.py
commands/: __init__.py  brain.py  date_cmd.py  greeting_cmd.py  listening_cmd.py  openApp_cmd.py  openWeb_cmd.py  time_cmd.py
tools/: generate_audio.py
